--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buy-low-sell-high-front",
+  "name": "lucrum",
   "version": "0.0.1",
   "license": "UNLICENSED",
   "description": "Buy Low Sell High dapp",
