wip - final touches

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "lucrum",
   "version": "0.0.1",
   "license": "UNLICENSED",
-  "description": "Buy Low Sell High dapp",
-  "productName": "Buy Low Sell High",
+  "description": "Lucrum frontend dapp",
+  "productName": "Lucrum",
   "cordovaId": "org.cordova.quasar.app",
   "capacitorId": "",
   "author": "draichi <lucasdraichi@gmail.com>",
