--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "axios": "^0.18.1",
     "ethers": "^4.0.47",
     "quasar": "^1.0.0",
-    "trading-vue-js": "^0.4.5"
+    "trading-vue-js": "^0.4.5",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
